apply plugin: 'maven-publish'
apply from: 'gradle/publishing.gradle'

sourceCompatibility = '1.9'
targetCompatibility = '1.9'

repositories {
    jcenter()
}

dependencies {
    implementation project(':FXyz-Core')
}

javadoc {
    options.addBooleanOption("Xdoclint:none").setValue(true);
    options.addBooleanOption("javafx").setValue(true);
}